force-app/main/default/objects/FieloCH__Mission__c/fields/FieloCH__DynamicObjective__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__DynamicObjective__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field</label>
    <type>Checkbox</type>
</CustomField>