force-app/main/default/objects/FieloCH__Mission__c/fields/FieloCH__FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__FieldName__c</fullName>
    <description>Name of the field with number value of transaction or event</description>
    <label>Field to Aggregate</label>
    <length>80</length>
    <type>Text</type>
</CustomField>