force-app/main/default/objects/FieloCH__Mission__c/fields/FieloCH__LogicalExpression__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__LogicalExpression__c</fullName>
    <label>Logical Expression</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>