force-app/main/default/objects/FieloCH__Mission__c/fields/FieloCH__Object__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Object__c</fullName>
    <description>FieloEE_Transaction__c or Event__c</description>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FieloEE__Event__c</fullName>
            </value>
            <value>
                <fullName>FieloEE__Transaction__c</fullName>
            </value>
            <value>
                <fullName>FieloEE__BadgeMember__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>