force-app/main/default/objects/FieloCH__Mission__c/fields/FieloCH__ObjectiveType__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__ObjectiveType__c</fullName>
    <description>Define the objetive of the mission, whether if the mission will count or will sum an specific amount.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Counter</fullName>
            </value>
            <value>
                <fullName>Summary</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Max Value</fullName>
            </value>
            <value>
                <fullName>Last</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>