force-app/main/default/objects/FieloCH__Mission__c/fields/FieloCH__ObjectiveValue__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__ObjectiveValue__c</fullName>
    <label>Value</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>