force-app/main/default/objects/FieloCH__Mission__c/fields/FieloCH__Operator__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__Operator__c</fullName>
    <description>Type of operator that will be evaluated</description>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
            <value>
                <fullName>greater or equal</fullName>
            </value>
            <value>
                <fullName>less than</fullName>
            </value>
            <value>
                <fullName>less or equal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>