force-app/main/default/objects/FieloCH__Mission__c/recordTypes/FieloCH__WithObjective.recordType-meta.xml
<RecordType>
    <fullName>FieloCH__WithObjective</fullName>
    <active>true</active>
    <description>Mission that must accomplished an objective. For example create 10 transactions during the period of the challenge. The status will "Not accomplish"  until the objective condition is true</description>
    <label>With Objective</label>
</RecordType>