force-app/main/default/objects/FieloCH__Mission__c/recordTypes/FieloCH__WithoutObjective.recordType-meta.xml
<RecordType>
    <fullName>FieloCH__WithoutObjective</fullName>
    <active>true</active>
    <description>In this types of mission the objective is in the challenge and the mission purpose is to collect or summarise Members actions.</description>
    <label>Without Objective</label>
</RecordType>