force-app/main/default/objects/FieloCH__Mission__c/listViews/FieloCH__All.listView-meta.xml
<ListView>
    <fullName>FieloCH__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>FieloCH__Description__c</columns>
    <columns>FieloCH__Object__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>